@@ -66,6 +66,9 @@ class OliveGtk:
                 "on_menuitem_branch_checkout_activate": handler.on_menuitem_branch_checkout_activate,
                 "on_menuitem_branch_commit_activate": handler.on_menuitem_branch_commit_activate,
                 "on_menuitem_branch_push_activate": handler.on_menuitem_branch_push_activate,
+                "on_menuitem_stats_diff_activate": handler.on_menuitem_stats_diff_activate,
+                "on_menuitem_stats_log_activate": handler.not_implemented,
+                "on_menuitem_stats_infos_activate": handler.not_implemented,
                 "on_toolbutton_update_clicked": handler.not_implemented,
                 "on_toolbutton_commit_clicked": handler.on_menuitem_branch_commit_activate,
                 "on_toolbutton_pull_clicked": handler.not_implemented,
